LINE SPACING + FIX CLUE 1 JS

--- a/media/styles.css
+++ b/media/styles.css
@@ -20,6 +20,7 @@ body {
     /* background-repeat: no-repeat; */
     margin: auto;
     padding: auto;
+    line-height: 30px;
 }
 
 
